# PhoenixEngine

./: .gitignore  .gitmodules  ADDITIONAL-COPYRIGHT-NOTICES.txt  CMakeLists.txt  CMakeLists_PHX.txt  Debug.lnk  Export.bat  LibraryMigrationHistory.txt  PROGRAMLOG.txt  PhoenixEngine.sln  PhoenixEngine.vcxproj  PhoenixEngine.vcxproj.filters  README.md  Release.lnk  Sources.cmake  WindowsExeMetadata.rct  apidump.json  cmake-gnug.txt  cmake-msvc.txt  cmake-variants.yaml  consolelog.txt  debugger-layout.ini  default-layout.ini  docs-ci.sh  game.ini  imgui.ini  log.txt  phoenix.conf  phoenix_postfxtest.conf  scriptdearimguienv.txt
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
Vendore/: Vendor.vcxproj  Vendor.vcxproj.filters
Vendore/glad/: gl.h
ci/: docs.sh  tests.sh
cmake/: cmake-gnug.txt  cmake-msvc.txt  gnug-configuresubprojects.txt  gnug.txt  msvc.txt
doc-assets/ci/: components.txt  doc-comments.json  globals-prologue.txt  globals.txt
gh-assets/wiki/: components-prologue.md  components-prologue.txt  components.md  components.txt  datatypes-prologue.txt  doc-comments.json  globals-epilogue.txt  globals-prologue.txt  globals.txt  libraries-prologue.txt  scriptenv.md  scriptenv.txt
include/: AnimationService.hpp  Debug.hpp  Engine.hpp  FileRW.hpp  MapLoader.hpp  ModelLoader.hpp  PhysicsEngine.hpp  Reflection.hpp  ThreadManager.hpp
include - Copy/: BaseMeshes.hpp  Debug.hpp  EntityComponent.hpp  FileRW.hpp  GlobalJsonConfig.hpp  MapLoader.hpp  UserInput.hpp
include - Copy/datatype/: Buffer.hpp  Color.hpp  Event.cpp  Event.hpp  GameObject.hpp  ValueRange.ipp  Vector3.hpp
include - Copy/editor/: Editor.hpp
include - Copy/gameobject/: Base3D.hpp  Light.hpp  MeshObject.hpp  Primitive.hpp
include - Copy/render/: Camera.hpp  Renderer.hpp  ShaderProgram.hpp  TextureManager.hpp
include/datatype/: Buffer.hpp  Color.hpp  Event.hpp  GameObject.hpp  Material.hpp  Mesh.hpp  ValueRange.cpp  ValueRange.hpp  Vector2.hpp  Vector3.hpp
include/editor/: editor.hpp  intersectionlib.hpp
include/gameobject/: Base3D.hpp  Camera.hpp  DataModel.hpp  GameObjects.hpp  Light.hpp  Mesh3D.hpp  MeshObject.hpp  Model.hpp  ParticleEmitter.hpp  Primitive.hpp  Script.hpp  Workspace.hpp
include/render/: Camera.hpp  GraphicsAbstractionLayer.hpp  Material.hpp  Renderer.hpp  ShaderProgram.hpp  TextureManager.hpp
lib/: Luau.Ast.lib  Luau.Compiler.lib  Luau.VM.lib  Vendor.idb  microprofile.lib  sfml-audio-s.lib  sfml-window-s.lib
lsp/: api-docs.json  api.d.luau  api.docs.json  phoenix.d.luau  phoenix.json
plugins/: .luaurc  niko.luau  testplugin.luau
plugins/niko/: Main.luau
resources/: material.mtl
resources/levels/: dev.world  dev_fmtv2.world  empty.world  hierarchy.world  mc.world  meshrescale.world  save.world  serializefromluautest.world  simple.world
resources/materials/: Materials_old.txt  awesomeMtl.mtl  boxframe.mtl  brick.mtl  concrete.mtl  corrodedmetal.mtl  diamondplate.mtl  err.mtl  error.mtl  floortiles.mtl  metal.mtl  neon.mtl  new.mtl  newmaterial.mtl  plastic.mtl  postprocessing.mtl  slate.mtl  smoothplastic.mtl  testmat.mtl  testuvmapped.mtl  this-material-will-not-work.mtl  ui.mtl  unlit.mtl  watertest.mtl  wireframe.mtl  wood.mtl  woodplanks.mtl
resources/meshes/: binarymesh.txt  binarymesh.txt.bak  binarytriangletest.mesh
resources/models/: Capoeira.glb  EmbeddedTexture.glb  crow-b.glb  instancing-test-3.glb  instancing-test.glb  riggedcube.glb  transform-cubes.glb  transformed-and-joined-cubes.glb
resources/prefabs/: test.fab
resources/scenes/: WeRemember.txt  animtest.hxscene  animtest2.hxscene  camera.hxscene  crossroads-evening.world  crossroads.world  de_dust2.hxscene  dev_fmtv2.hxscene  dev_fmtv2.world  ed.world  empty.world  hierarchy.hxscene  mc.hxscene  recursive.hxscene  rooms.hxscene  root.world  s2.world  save.world  simplev2.hxscene  spatial-audio-test.world  test.hxscene
resources/scripts/: .config.luau  201variables.luau  api.d.luau  api.docs.json  default-module.luau  default.luau  devmap.luau  docs-ci.luau  empty.luau  err_runtime.luau  err_stackoverflow.luau  err_syntax.luau  keycodes.luau  lsp-defs.d.luau  mc.luau  minesweeper.luau  raytest.luau  roomsgen.luau  root.luau  safe-space.luau  shdgraphtest.luau  singlestep.luau  spatial-audio-test.luau  stdoutput201variables.luau
resources/shaders/: awesome.frag  awesome.shp  awesome.vert  base2d.frag  base2d.vert  base3d.frag  base3d.vert  bloomcomposite.frag  bloomcomposite.shp  bloomingextract.frag  bloomingextract.shp  boxframe.frag  boxframe.shp  dlshadowmap.frag  dlshadowmap.vert  error.frag  error.shp  grass.shp  grasssway.vert  particle.frag  particle.shp  particle.vert  pointlightshadow.frag  pointlightshadow.geom  pointlightshadow.vert  postprocessing.frag  postprocessing.shp  postprocessing.vert  separableblur.frag  separableblur.shp  shaderGraphInitial.frag  shdgraphtest.shp  skybox.frag  skybox.shp  skybox.vert  ui.frag  ui.shp  ui.vert  unlit.frag  unlit.shp  (+14 more)
shell/: build.sh  buildprofiler.sh  chmod.sh  configure.sh  dependencies.sh  docs.sh  l_build.sh  l_buildprofiler.sh  l_chmod.sh  l_configure.sh  l_dependencies.sh  l_setupandbuild.sh  setup.sh  tests.sh  update.sh
src/: BaseMeshes.cpp  Debug.cpp  Engine.cpp  FileRW.cpp  Main.cpp  MapLoader.cpp  ModelLoader.cpp  PhysicsEngine.cpp  Reflection.cpp  SceneFormat.cpp  ThreadManager.cpp  UserInput.cpp
src - Copy/: AnimationService.cpp  BaseMeshes.cpp  Debug.cpp  Engine.cpp  FileRW.cpp  Main.cpp  MapLoader.cpp  ModelLoader.cpp  ThreadManager.cpp
src - Copy/datatype/: Buffer.cpp  Color.cpp  GameObject.cpp  Vector2.cpp  Vector3.cpp
src - Copy/editor/: Editor.cpp  intersectionlib.cpp
src - Copy/gameobject/: Base3D.cpp  Light.cpp  ParticleEmitter.cpp  Primitive.cpp
src - Copy/render/: Camera.cpp  Renderer.cpp  TextureManager.cpp
src/datatype/: Buffer.cpp  Color.cpp  GameObject.cpp  Material.cpp  Mesh.cpp  Vector2.cpp  Vector3.cpp
src/decl/: AnimationService.hpp  BaseMeshes.hpp  CameraController.hpp  Debug.hpp  DeveloperTools.hpp  Log.hpp  (+19 more)
wikigen/: doc-comments.json  libraries-prologue.md
(+416 files in other folders)
